# axiom-ledger

./: Cargo.toml  Project-Roadmap.md  README.md  docker-compose.yml
.sqlx/: query-233634e5f419ee451241e50f5b0742da397b1cef7a6702a7d72ac2292d5646d4.json  query-731070f15c23e78d416debe6bdfe1dafe34d4a5bdd0f2862520a06a7b33aa1b4.json  query-eb0487b40c76dd6694e61ebfbe5f5a09a325495badb8e69505980f4019f0cabe.json
migrations/: 0002_update_balance_field_types_on_wallet_table.sql  0003_add_currency_to_wallets.sql  0004_add_idempotency_table.sql  001_initial_schema.sql
src/: lib.rs
src/domain/: address.rs  balance.rs  error.rs  mod.rs  wallet.rs
src/graphql/: scalars.rs
src/infrastructure/: db.rs  mod.rs
src/infrastructure/postgres/: mod.rs  wallet_repo.rs
src/repository/: db_provider.rs  idempotency.rs  idempotency_postgres.rs  mod.rs  wallet.rs
src/service/: idempotent_service.rs  mod.rs  transfer_service.rs
tests/: health_check.rs  transfer_integration_test.rs
