[package]
name = "axiom-ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
validator = { version = "0.20.0", features = [
  "derive",
] }
# SQLx with Postgres and Async support
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "chrono",
  "runtime-tokio-rustls",
  "bigdecimal",
  "uuid",
  "json",
] }

serde = { version = "1.0.228", features = [
  "derive",
] }

# For handling the NUMERIC database type accurately
bigdecimal = "0.4"
# Async runtime
tokio = { version = "1", features = [
  "full",
] }
dotenvy = "0.15"
async-trait = "0.1"
anyhow = "1.0.102"
# Environment variable loader

[dependencies.uuid]
version = "1.23.1"
# Lets you generate random UUIDs
features = [
  "v4",
]
